Block menu-region and menu-user

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,8 @@
 
 	<meta charset="utf-8">
 
-	<title>Title</title>
-	<meta name="description" content="">
+	<title>Новостройки и жилые комплексы Москвы и Подмосковья</title>
+	<meta name="description" content="Квартиры от застройщиков  в новостройках и жилых комплексах Москвы и Подмосковья. Фото, цены, сроки сдачи новостроек.">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -28,8 +28,29 @@
 
 </head>
 
-<body>
+<body class="main-page">
+	
+	<header class="header-section header-section_color_black clearfix">
+		<div class="container">
+			<div class="menu-region header-section__menu-region_float_left">
+				<ul class="menu-region__items">
+					<li class="menu-region__item"><a class="menu-region__item-ref menu-region__item-ref_active">Москва и МО</a></li>
+					<li class="menu-region__item"><a href="#" class="menu-region__item-ref">С.-Петербург и ЛО</a></li>
+					<li class="menu-region__item"><a href="#" class="menu-region__item-ref">Другие регионы</a></li>
+					<li class="menu-region__item"><a href="#" class="menu-region__item-ref">Зарубежная недвижимость</a></li>
+					<li class="menu-region__item"><a href="#" class="menu-region__item-ref">Поиск на карте</a></li>
+				</ul>		
+			</div>
 
+			<div class="menu-user header-section__menu-user_float_right">
+				<ul class="menu-user__items">
+					<li class="menu-user__item"><a href="#" class="menu-user__item-ref"><span class="menu-user__item-ref_before-img menu-user__item-ref_before-img_ad">Разместить объявление</span></a></li>
+					<li class="menu-user__item"><a href="#" class="menu-user__item-ref"><span class="menu-user__item-ref_before-img menu-user__item-ref_before-img_reg">Зарегистрироваться</span></a></li>
+					<li class="menu-user__item"><a href="#" class="menu-user__item-ref menu-user__item-ref_border_dotted"><span class="menu-user__item-ref_before-img menu-user__item-ref_before-img_in">Войти</span></a></li>
+				</ul>		
+			</div>
+		</div>
+	</header>
 	
 	
 	<link rel="stylesheet" href="css/main.min.css">
