Blocks logo and menu-main

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,28 @@
 			</div>
 		</div>
 	</header>
+
+
+	<header class="header-section header-section_color_gray header-section_padding-top clearfix">
+		<div class="container">
+			<div class="logo header-section__logo_margin-float_left" title="База недвижимости Москвы и Подмосковья">
+				<img class="logo__img" src="img/logo.svg" width="181px" height="27px" alt="База недвижимости Москвы и Подмосковья">
+			</div>
+			<nav class="menu-main header-section__menu-main_float_left">
+				<ul class="menu-main__items">
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref"><span class="menu-main__item-ref_border">Продажа</span></a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref"><span class="menu-main__item-ref_border">Аренда</span></a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref menu-main__item-ref_spec">Спецпредложения</a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref menu-main__item-ref_active">Новостройки</a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Посёлки</a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Риэлторы</a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Журнал</a></li>
+				</ul>		
+			</nav>
+
+			
+		</div>
+	</header>
 	
 	
 	<link rel="stylesheet" href="css/main.min.css">
