Blocks Absolut and baner

--- a/app/index.html
+++ b/app/index.html
@@ -55,22 +55,30 @@
 
 	<header class="header-section header-section_color_gray header-section_padding-top clearfix">
 		<div class="container">
-			<div class="logo header-section__logo_margin-float_left" title="База недвижимости Москвы и Подмосковья">
-				<img class="logo__img" src="img/logo.svg" width="181px" height="27px" alt="База недвижимости Москвы и Подмосковья">
+			<div class="header-section__logo-nav-wrap">
+				<div class="logo header-section__logo_margin-float_left" title="База недвижимости Москвы и Подмосковья">
+					<img class="logo__img" src="img/logo.svg" width="181px" height="27px" alt="База недвижимости Москвы и Подмосковья">
+				</div>
+				<nav class="menu-main header-section__menu-main_float_left">
+					<ul class="menu-main__items">
+						<li class="menu-main__item"><a href="#" class="menu-main__item-ref"><span class="menu-main__item-ref_border">Продажа</span></a></li>
+						<li class="menu-main__item"><a href="#" class="menu-main__item-ref"><span class="menu-main__item-ref_border">Аренда</span></a></li>
+						<li class="menu-main__item"><a href="#" class="menu-main__item-ref menu-main__item-ref_spec">Спецпредложения</a></li>
+						<li class="menu-main__item"><a href="#" class="menu-main__item-ref menu-main__item-ref_active">Новостройки</a></li>
+						<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Посёлки</a></li>
+						<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Риэлторы</a></li>
+						<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Журнал</a></li>
+					</ul>		
+				</nav>
 			</div>
-			<nav class="menu-main header-section__menu-main_float_left">
-				<ul class="menu-main__items">
-					<li class="menu-main__item"><a href="#" class="menu-main__item-ref"><span class="menu-main__item-ref_border">Продажа</span></a></li>
-					<li class="menu-main__item"><a href="#" class="menu-main__item-ref"><span class="menu-main__item-ref_border">Аренда</span></a></li>
-					<li class="menu-main__item"><a href="#" class="menu-main__item-ref menu-main__item-ref_spec">Спецпредложения</a></li>
-					<li class="menu-main__item"><a href="#" class="menu-main__item-ref menu-main__item-ref_active">Новостройки</a></li>
-					<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Посёлки</a></li>
-					<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Риэлторы</a></li>
-					<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Журнал</a></li>
-				</ul>		
-			</nav>
-
-			
+			<div class="header-section__absolut-banner-wrap">
+				<div class="baner header-section__baner">
+					<img src="img/baner.gif" alt="Реклама">
+				</div>
+				<div class="absolut header-section__absolut">
+					<object type="image/svg+xml" data="img/absolut-logo.svg">Ваш браузер не поддерживает SVG</object>
+				</div>
+			</div>
 		</div>
 	</header>
 	
