--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 
 <body class="main-page">
 	
-	<header class="header-section header-section_color_black clearfix">
+	<header class="header-section header-section_color_black clearfix header-top">
 		<div class="container">
 			<div class="menu-region header-section__menu-region_float_left">
 				<ul class="menu-region__items">
@@ -53,34 +53,48 @@
 	</header>
 
 
-	<header class="header-section header-section_color_gray header-section_padding-top clearfix">
+	<header class="header-section header-section_color_gray header-section_padding-top clearfix header-bottom">
 		<div class="container">
-			<div class="header-section__logo-nav-wrap">
-				<div class="logo header-section__logo_margin-float_left" title="База недвижимости Москвы и Подмосковья">
-					<img class="logo__img" src="img/logo.svg" width="181px" height="27px" alt="База недвижимости Москвы и Подмосковья">
-				</div>
-				<nav class="menu-main header-section__menu-main_float_left">
-					<ul class="menu-main__items">
-						<li class="menu-main__item"><a href="#" class="menu-main__item-ref"><span class="menu-main__item-ref_border">Продажа</span></a></li>
-						<li class="menu-main__item"><a href="#" class="menu-main__item-ref"><span class="menu-main__item-ref_border">Аренда</span></a></li>
-						<li class="menu-main__item"><a href="#" class="menu-main__item-ref menu-main__item-ref_spec">Спецпредложения</a></li>
-						<li class="menu-main__item"><a href="#" class="menu-main__item-ref menu-main__item-ref_active">Новостройки</a></li>
-						<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Посёлки</a></li>
-						<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Риэлторы</a></li>
-						<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Журнал</a></li>
-					</ul>		
-				</nav>
+			<div class="logo header-section__logo_margin-float_left" title="База недвижимости Москвы и Подмосковья">
+				<img class="logo__img" src="img/logo.svg" width="181px" height="27px" alt="База недвижимости Москвы и Подмосковья">
 			</div>
-			<div class="header-section__absolut-banner-wrap">
-				<div class="baner header-section__baner">
-					<img src="img/baner.gif" alt="Реклама">
-				</div>
-				<div class="absolut header-section__absolut">
-					<object type="image/svg+xml" data="img/absolut-logo.svg">Ваш браузер не поддерживает SVG</object>
-				</div>
+			<nav class="menu-main header-section__menu-main_float_left">
+				<ul class="menu-main__items">
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref"><span class="menu-main__item-ref_border">Продажа</span></a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref"><span class="menu-main__item-ref_border">Аренда</span></a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref menu-main__item-ref_spec">Спецпредложения</a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref menu-main__item-ref_active">Новостройки</a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Посёлки</a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Риэлторы</a></li>
+					<li class="menu-main__item"><a href="#" class="menu-main__item-ref">Журнал</a></li>
+					<li class="menu-main__item">
+						<a href="#" class="menu-main__item-ref menu-main__item-ref_absolut">
+							<object type="image/svg+xml" data="img/absolut-logo.svg">Ваш браузер не поддерживает SVG</object>
+						</a>
+					</li>
+				</ul>		
+			</nav>
+			<div class="baner header-section__baner">
+				<img src="img/baner.gif" alt="Реклама">
 			</div>
 		</div>
 	</header>
+
+
+	<div class="container-main content clearfix">
+
+		<div class="content-wrap">
+			<article class="page content__page">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet inventore, rerum dicta quod dolor est fuga 
+				ratione provident maiores aperiam, non illo error autem nisi minus in, facilis. Incidunt, eum.
+			</article>
+		</div>
+
+		<div class="side-bar content__side-bar">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis tempore eaque fugit iure, iste, et alias odio vero 
+			laudantium cum dolorem ut. Odit nemo excepturi, odio, impedit voluptatum vero dolore!					
+		</div>
+	</div>
 	
 	
 	<link rel="stylesheet" href="css/main.min.css">
