--- a/app/index.html
+++ b/app/index.html
@@ -85,14 +85,62 @@
 
 		<div class="content-wrap">
 			<article class="page content__page">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet inventore, rerum dicta quod dolor est fuga 
-				ratione provident maiores aperiam, non illo error autem nisi minus in, facilis. Incidunt, eum.
+				<ul class="bread-crumbs page__bread-crumbs">
+					<li class="bread-crumbs__item bread-crumbs__item-1"><a class="bread-crumbs__ref" href="#">Новостройки</a></li>
+					<li class="bread-crumbs__item bread-crumbs__item-2"><a class="bread-crumbs__ref" href="#">Акции и спецпредложения</a></li>
+				</ul>
+				<section class="stock content__stock">
+					<div class="stock__wrap clearfix">
+						<h2 class="stock__name">
+							ВТБ24 предлагает покупателям "Пресня Сити",
+							"Басманный,5" и "Царская площадь" премиальное
+							банковское обслуживание
+						</h2>
+						<div class="stock__date">
+							<span class="stock__date_days">5 дней</span>
+							<div class="stock__date_time">08 : 34 : 10</div>
+						</div>
+					</div>
+					<div class="stock__before clearfix">
+							до 31 января
+						</div>
+					<div class="stock__wrap clearfix">
+						<div class="stock__img" style="background-image: url(img/5.jpg);" heigth="100px" width="30%"></div>
+						<p class="stock__info">
+							Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.
+							За lorem рыбными рукописи себя буквоград предупреждал лучше заголовок. Возвращайся предложения
+							сих эта города, алфавит ее инициал имени выйти страна.
+						</p>
+						<div class="stock__details">
+							<span class="stock__details_info">Узнайте детали акции</span>
+							<div class="stock__details_phone">+7 495 150-XX-XX</div>
+						</div>
+					</div>
+				</section>
 			</article>
 		</div>
 
 		<div class="side-bar content__side-bar">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis tempore eaque fugit iure, iste, et alias odio vero 
-			laudantium cum dolorem ut. Odit nemo excepturi, odio, impedit voluptatum vero dolore!					
+			<a href="#" class="side-bar__item">
+				<img class="side-bar__item-img" src="img/etalon.jpg" alt=""Эталон-Сити"">
+				<h2 class="side-bar__item-name">
+					"Эталон-Сити"
+				</h2>
+				<p class="side-bar__item-info">
+					Квартиры бизнес - класса от 4,9 млн руб! Метро и парк рядом.
+				</p>
+			</a>	
+
+			<a href="#" class="side-bar__item">
+				<img class="side-bar__item-img" src="img/anapolis.jpg" alt=" Квартиры с отделкой!">
+				<h2 class="side-bar__item-name">
+					 Квартиры с отделкой!
+				</h2>
+				<p class="side-bar__item-info">
+					25 квартир по цене от 60000 руб/м2 в "Резиденции Анаполис".
+				</p>
+			</a>
+
 		</div>
 	</div>
 	
