--- a/app/index.html
+++ b/app/index.html
@@ -102,10 +102,10 @@
 						</div>
 					</div>
 					<div class="stock__before clearfix">
-							до 31 января
-						</div>
+						до 31 января
+					</div>
 					<div class="stock__wrap clearfix">
-						<div class="stock__img" style="background-image: url(img/5.jpg);" heigth="100px" width="30%"></div>
+						<div class="stock__img" style="background-image: url(img/5.jpg);" heigth="240px" width="40%"></div>
 						<p class="stock__info">
 							Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.
 							За lorem рыбными рукописи себя буквоград предупреждал лучше заголовок. Возвращайся предложения
@@ -117,8 +117,92 @@
 						</div>
 					</div>
 				</section>
+
+				<section class="all-stock content__all-stock">
+					<span  class="all-stock__name">Ещё акции</span>
+
+					<div class="all-stock__item">
+						<a href="#">
+							<div class="all-stock__img" style="background-image: url(img/1.jpg);" heigth="180px" width="30%">
+								<div class="all-stock__before">
+									до 15 января
+								</div>
+							</div>
+						</a>
+						<div class="all-stock__info">
+							<a class="all-stock__ref" href="#">
+								<h3 class="all-stock__title">
+									Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. 
+								</h3>
+							</a>
+							<div class="all-stock__text">
+								То если, грустный рукописи пунктуация 
+								языкового ipsum повстречался снова приставка!
+							</div>
+						</div>
+						<div class="all-stock__left">
+							<div class="all-stock__left-title">Осталось</div>
+							<div class="all-stock__left-number">0	8</div>
+							<div class="all-stock__left-day">дней</div>
+						</div>
+					</div>
+
+					<div class="all-stock__item">
+						<a href="#">
+							<div class="all-stock__img" style="background-image: url(img/4.jpg);" heigth="180px" width="30%">
+								<div class="all-stock__before">
+									до 15 января
+								</div>
+							</div>
+						</a>
+						<div class="all-stock__info">
+							<a class="all-stock__ref" href="#">
+								<h3 class="all-stock__title">
+									Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. 
+								</h3>
+							</a>
+							<div class="all-stock__text">
+								То если, грустный рукописи пунктуация 
+								языкового ipsum повстречался снова приставка!
+							</div>
+						</div>
+						<div class="all-stock__left">
+							<div class="all-stock__left-title">Осталось</div>
+							<div class="all-stock__left-number">0	8</div>
+							<div class="all-stock__left-day">дней</div>
+						</div>
+					</div>
+
+					<div class="all-stock__item">
+						<a href="#">
+							<div class="all-stock__img" style="background-image: url(img/2.jpg);" heigth="180px" width="30%">
+								<div class="all-stock__before">
+									до 15 января
+								</div>
+							</div>
+						</a>
+						<div class="all-stock__info">
+							<a class="all-stock__ref" href="#">
+								<h3 class="all-stock__title">
+									Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. 
+								</h3>
+							</a>
+							<div class="all-stock__text">
+								То если, грустный рукописи пунктуация 
+								языкового ipsum повстречался снова приставка!
+							</div>
+						</div>
+						<div class="all-stock__left">
+							<div class="all-stock__left-title">Осталось</div>
+							<div class="all-stock__left-number">0	8</div>
+							<div class="all-stock__left-day">дней</div>
+						</div>
+					</div>
+
+				</section>
+
 			</article>
-		</div>
+	</div>
 
 		<div class="side-bar content__side-bar">
 			<a href="#" class="side-bar__item">
