Block other-stock

--- a/app/index.html
+++ b/app/index.html
@@ -91,11 +91,13 @@
 				</ul>
 				<section class="stock content__stock">
 					<div class="stock__wrap clearfix">
-						<h2 class="stock__name">
-							ВТБ24 предлагает покупателям "Пресня Сити",
-							"Басманный,5" и "Царская площадь" премиальное
-							банковское обслуживание
-						</h2>
+						<a class="stock__ref" href="#">
+							<h2 class="stock__name">
+								ВТБ24 предлагает покупателям "Пресня Сити",
+								"Басманный,5" и "Царская площадь" премиальное
+								банковское обслуживание
+							</h2>
+						</a>
 						<div class="stock__date">
 							<span class="stock__date_days">5 дней</span>
 							<div class="stock__date_time">08 : 34 : 10</div>
@@ -105,7 +107,9 @@
 						до 31 января
 					</div>
 					<div class="stock__wrap clearfix">
-						<div class="stock__img" style="background-image: url(img/5.jpg);" heigth="240px" width="40%"></div>
+						<a class="stock__ref" href="#">
+							<div class="stock__img" style="background-image: url(img/5.jpg);" heigth="240px" width="40%"></div>
+						</a>
 						<p class="stock__info">
 							Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.
 							За lorem рыбными рукописи себя буквоград предупреждал лучше заголовок. Возвращайся предложения
@@ -200,11 +204,154 @@
 					</div>
 
 				</section>
+			</article>
+
+			<article class="page content__page page_without-border">
+				<section class="other-stock content__other-stock clearfix">
+					<div class="other-stock__title">Другие акции</div>
+
+					<div class="other-stock__wrap">
+						<a class="other-stock__ref" href="#">
+							<div class="other-stock__item">
+								<div class="other-stock__img" style="background-image: url(img/3.jpg);" heigth="180px"></div>
+								<p class="other-stock__item-title">Новогодняя скидка 1 000 000 рублей в ЖК SREDA</p>
+								<div class="other-stock__before">
+									до 31 января
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="other-stock__wrap">
+						<a class="other-stock__ref" href="#">
+							<div class="other-stock__item">
+								<div class="other-stock__img" style="background-image: url(img/5.jpg);" heigth="180px"></div>
+								<p class="other-stock__item-title">
+									ВТБ24 предлагает покупателям "Пресня Сити", "Басманный,5" и "Царская площадь" премиальное банковское обслуживание
+								</p>
+								<div class="other-stock__before">
+									до 31 января
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="other-stock__wrap">
+						<a class="other-stock__ref" href="#">
+							<div class="other-stock__item">
+								<div class="other-stock__img" style="background-image: url(img/1.jpg);" heigth="180px"></div>
+								<p class="other-stock__item-title">Новогодняя скидка 1 000 000 рублей в ЖК SREDA</p>
+								<div class="other-stock__before">
+									до 31 января
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="other-stock__wrap">
+						<a class="other-stock__ref" href="#">
+							<div class="other-stock__item">
+								<div class="other-stock__img" style="background-image: url(img/3.jpg);" heigth="180px"></div>
+								<p class="other-stock__item-title">Новогодняя скидка 1 000 000 рублей в ЖК SREDA</p>
+								<div class="other-stock__before">
+									до 31 января
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="other-stock__wrap">
+						<a class="other-stock__ref" href="#">
+							<div class="other-stock__item">
+								<div class="other-stock__img" style="background-image: url(img/5.jpg);" heigth="180px"></div>
+								<p class="other-stock__item-title">
+									ВТБ24 предлагает покупателям "Пресня Сити", "Басманный,5" и "Царская площадь" премиальное банковское обслуживание
+								</p>
+								<div class="other-stock__before">
+									до 31 января
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="other-stock__wrap">
+						<a class="other-stock__ref" href="#">
+							<div class="other-stock__item">
+								<div class="other-stock__img" style="background-image: url(img/1.jpg);" heigth="180px"></div>
+								<p class="other-stock__item-title">Новогодняя скидка 1 000 000 рублей в ЖК SREDA</p>
+								<div class="other-stock__before">
+									до 31 января
+								</div>
+							</div>
+						</a>
+					</div>
+
+				</section>
 
 			</article>
 	</div>
 
 		<div class="side-bar content__side-bar">
+			<a href="#" class="side-bar__item">
+				<img class="side-bar__item-img" src="img/etalon.jpg" alt=""Эталон-Сити"">
+				<h2 class="side-bar__item-name">
+					"Эталон-Сити"
+				</h2>
+				<p class="side-bar__item-info">
+					Квартиры бизнес - класса от 4,9 млн руб! Метро и парк рядом.
+				</p>
+			</a>	
+
+			<a href="#" class="side-bar__item">
+				<img class="side-bar__item-img" src="img/anapolis.jpg" alt=" Квартиры с отделкой!">
+				<h2 class="side-bar__item-name">
+					 Квартиры с отделкой!
+				</h2>
+				<p class="side-bar__item-info">
+					25 квартир по цене от 60000 руб/м2 в "Резиденции Анаполис".
+				</p>
+			</a>
+
+			<a href="#" class="side-bar__item">
+				<img class="side-bar__item-img" src="img/etalon.jpg" alt=""Эталон-Сити"">
+				<h2 class="side-bar__item-name">
+					"Эталон-Сити"
+				</h2>
+				<p class="side-bar__item-info">
+					Квартиры бизнес - класса от 4,9 млн руб! Метро и парк рядом.
+				</p>
+			</a>	
+
+			<a href="#" class="side-bar__item">
+				<img class="side-bar__item-img" src="img/anapolis.jpg" alt=" Квартиры с отделкой!">
+				<h2 class="side-bar__item-name">
+					 Квартиры с отделкой!
+				</h2>
+				<p class="side-bar__item-info">
+					25 квартир по цене от 60000 руб/м2 в "Резиденции Анаполис".
+				</p>
+			</a>
+
+			<a href="#" class="side-bar__item">
+				<img class="side-bar__item-img" src="img/etalon.jpg" alt=""Эталон-Сити"">
+				<h2 class="side-bar__item-name">
+					"Эталон-Сити"
+				</h2>
+				<p class="side-bar__item-info">
+					Квартиры бизнес - класса от 4,9 млн руб! Метро и парк рядом.
+				</p>
+			</a>	
+
+			<a href="#" class="side-bar__item">
+				<img class="side-bar__item-img" src="img/anapolis.jpg" alt=" Квартиры с отделкой!">
+				<h2 class="side-bar__item-name">
+					 Квартиры с отделкой!
+				</h2>
+				<p class="side-bar__item-info">
+					25 квартир по цене от 60000 руб/м2 в "Резиденции Анаполис".
+				</p>
+			</a>
+
 			<a href="#" class="side-bar__item">
 				<img class="side-bar__item-img" src="img/etalon.jpg" alt=""Эталон-Сити"">
 				<h2 class="side-bar__item-name">
